# sentAnalysis

./: CMakeLists.txt  Stringy.cpp  Stringy.h  Test.cpp  blackList.txt  machine.cpp  machine.h  main.cpp  outPut01.txt  review.cpp  review.h  testerReview.cpp  testerReview.h  testing_Data.csv  training_Data.csv  word.cpp  word.h
.github/workflows/: build.yaml
